--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@fastify/cors": "^8.1.1",
     "@prisma/client": "^4.5.0",
-    "fastify": "^4.9.2"
+    "fastify": "^4.9.2",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.19.1"
   },
   "name": "server",
   "version": "1.0.0",
